--- a/src/styles/Inventarios.css
+++ b/src/styles/Inventarios.css
@@ -29,18 +29,18 @@ thead th {
 tbody td {
   padding: 10px;
   text-align: center;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #6e6e6e;
   font-size: 0.9rem;
 }
 
 /* Alternar colores de filas */
 tbody tr:nth-child(even) {
-  background-color: #f9f9f9;
+  background-color: #f1f1f1;
 }
 
 /* Cambiar color al pasar el mouse */
 tbody tr:hover {
-  background-color: #f1f1f1;
+  background-color: #e4e4e4;
 }
 
 /* Estados de inventario */
